// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of an Icon control with icon 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "tooltipBackgroundColor": "gray",
      "tooltipForegroundColor": "white",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.i
    className="ui-icon fa fa-fw fa-star test-class"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    iconName="star"
    id=""
    imageFile=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    obj="Icon"
    selected={false}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "blue",
        "color": "red",
      }
    }
    testing={true}
    theme={null}
    tooltip=""
    visible={true}
    width=""
    xcss={null}
  />
</ThemeProvider>
`;

exports[`Test creation of an Icon control with image 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "tooltipBackgroundColor": "gray",
      "tooltipForegroundColor": "white",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.img
    className="ui-icon"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    iconName="bomb"
    id=""
    imageFile="./test-icon-image.png"
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    obj="Icon"
    selected={false}
    sizing="normal"
    src="./test-icon-image.png"
    style={Object {}}
    testing={true}
    theme={null}
    tooltip=""
    visible={true}
    width=""
    xcss={null}
  />
</ThemeProvider>
`;

exports[`Test making the ButtonDialog invisible 1`] = `
.c0 {
  text-align: center;
  font-size: 1rem;
  display: none !important;
  width: 0 !important;
}

<Icon
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Icon"
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.i
      className="ui-icon fa fa-fw fa-bomb"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      iconName="bomb"
      id=""
      imageFile=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Icon"
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      tooltip=""
      visible={false}
      width=""
      xcss={null}
    >
      <i
        className="ui-icon fa fa-fw fa-bomb c0"
        contentEditable={false}
        direction="right"
        disabled={false}
        height=""
        id=""
        selected={false}
        style={Object {}}
        width=""
      />
    </styled.i>
  </ThemeProvider>
</Icon>
`;

exports[`Test retrieval of the Icon props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "id": "",
  "imageFile": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "Icon",
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the disabling of the Icon control 1`] = `
.c0 {
  text-align: center;
  font-size: 1rem;
  cursor: default;
  opacity: 0.33;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<Icon
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Icon"
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.i
      className="ui-icon fa fa-fw fa-bomb"
      contentEditable={false}
      direction="right"
      disabled={true}
      focus={false}
      height=""
      iconName="bomb"
      id=""
      imageFile=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Icon"
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      tooltip=""
      visible={true}
      width=""
      xcss={null}
    >
      <i
        className="ui-icon fa fa-fw fa-bomb c0"
        contentEditable={false}
        direction="right"
        disabled={true}
        height=""
        id=""
        selected={false}
        style={Object {}}
        width=""
      />
    </styled.i>
  </ThemeProvider>
</Icon>
`;
